// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformBabel works with arbitrary-values 1`] = `
"import { tw } from 'typewind';
export default function Button() {
  return <button className={"text-[20px]"}>Click Me</button>;
}"
`;

exports[`transformBabel works with arbitrary-variants 1`] = `
"import { tw } from 'typewind';
export default function Button() {
  return <button className={"[&:nth-child(3)]:underline"}>Click Me</button>;
}"
`;

exports[`transformBabel works with container-queries 1`] = `
"import { tw } from 'typewind';
export default function App() {
  return <div className={"@container"}>
      <div className={"@lg:underline"}>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, non.
      </div>
    </div>;
}"
`;

exports[`transformBabel works with modifiers 1`] = `
"import { tw } from 'typewind';
export default function Button() {
  return <button className={"bg-blue-500 hover:bg-blue-600 text-white rounded py-3 px-4 md:py-4 md:px-5 lg:py-5 lg:px-6 dark:bg-sky-900 dark:hover:bg-sky-800 !text-red-500 hover:!text-red-500"}>
      Click Me
    </button>;
}"
`;

exports[`transformBabel works with normal-usage 1`] = `
"import { tw } from 'typewind';
import './index.css';
export default function App() {
  return <div className={"h-screen w-full bg-gray-800 flex justify-center items-center"}>
      <p className={"text-white"}>Hello World!</p>
    </div>;
}"
`;

exports[`transformBabel works with transform 1`] = `
"import { tw } from 'typewind';
export default function Button() {
  console.log("text-red-100");
  return <button className={"text-red-100"}>Click Me</button>;
}"
`;
